# MathWorks

./: .gitignore  Lab10.ipynb  MathModelNN.ipynb  Task11.ipynb  Task12.ipynb  Task8.ipynb  pyproject.toml
EnvMath/Maple/: Task3_1.mw  Task3_3.mw  Task3_3_MAS.bak  Task3_4.mw  Task3_4_MAS.bak  Task3_5.mw  Task3_6.mw  Task3_7.mw
SciPyProjects/6thSemTasks/InformTheory/: output.txt  task1.ipynb  task1.py
SciPyProjects/6thSemTasks/IntellectedSystems/: ClusterAnalysis.ipynb  ClusterAnalysis.py  Regression.html  Regression.py  RegressionMultiDim.py  Untitled.ipynb
SciPyProjects/6thSemTasks/ObjectRecognition/: RandomStateGen_Task1.py
SciPyProjects/FifthSemTasks/: main.py
SciPyProjects/FifthSemTasks/AuroHydroDynamics/: 2dFlowEmitation.ipynb  ConformalMapping.py  StreamFlowOverCircle.ipynb  StreamFlowOverCircle.py  Untitled.ipynb  api.py  ticks.py  пп.py
SciPyProjects/FifthSemTasks/CompVision/: CVLess1.py  CVLess2.py  CVLess3.py  CVLess4.ipynb  CVLess4.py  CVLess5.py  CVLess6.ipynb  CVLess6.py  Untitled.ipynb
SciPyProjects/FifthSemTasks/DigitalSignalProcessing/: BSpline.py  BoundaryValueProblem.py  CheckCoordinatesH.py  CubicSpline.py  DiscreteFourierProcessing.py  DoubechiWeavler.py  FastFourierProcessing.py  FourierProcessing.py  FourierRuntime.py  FundamentalSpline.py  TridiagonalMatrixAlgorithm.py
SciPyProjects/FifthSemTasks/NeuralInterfaces/: Listener.py  dataSignal.py  dataSignal2.py  dataSignal3.py  test.py
SciPyProjects/GraduateWork/: GANMinst.ipynb  GanPlot.ipynb
SciPyProjects/PhasePortrait/: GraphWriter.py  OdePhasePortraitPlotter.ipynb
(+101 files in other folders)
