[tool.poetry]
name = "mathworks"
version = "0.1.0"
description = ""
authors = ["KartonDCP <d.cherkasov@haulmont.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
numpy = "^1.21.4"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
